# DeepSpeedExamples

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CODEOWNERS  README.md
BingBertGlue/: run_glue_bert_base_finetune.sh  run_glue_bert_large_finetune.sh  run_glue_classifier_bert_base.py
BingBertSquad/: convert_bert_ckpt_to_deepspeed.py  deepspeed_bsz24_config.json  (+15 more)
benchmarks/inference/deepspeedometer/: README.md  pyproject.toml  run_example.sh
benchmarks/inference/deepspeedometer/configs/: 128k-120.yaml  1300-120.yaml  2600-60.yaml  500-500.yaml
benchmarks/inference/deepspeedometer/src/deepspeedometer/: __init__.py  config.py  prompt.py
benchmarks/inference/deepspeedometer/src/deepspeedometer/clients/: __init__.py  azure_ml_client.py  dummy_client.py  fastgen_client.py  openai_client.py  vllm_client.py
benchmarks/inference/deepspeedometer/tests/: README.md  conftest.py  test_benchmark.py  test_config.py  test_early_stop.py  test_prompt.py
benchmarks/inference/llm-bench/: pyproject.toml  run_example.sh
benchmarks/inference/llm-bench/configs/: 128k-120.yaml
benchmarks/inference/llm-bench/src/: arg_parsing.py  benchmark_runner.py  config.py  prompt.py  response.py  status.py
benchmarks/inference/llm-bench/src/clients/: __init__.py  azure_ml_client.py  base.py  dummy_client.py  fastgen_client.py  vllm_client.py
benchmarks/inference/llm-bench/src/llm_bench/: arg_parsing.py  benchmark_runner.py  config.py  prompt.py  response.py  sample_input.py  status.py
benchmarks/inference/llm-bench/src/llm_bench/clients/: __init__.py  azure_ml_client.py  base.py  dummy_client.py  fastgen_client.py  vllm_client.py
benchmarks/inference/llm-bench/tests/: conftest.py  test_config.py  test_early_stop.py  test_prompt.py
(+1224 files in other folders)
