[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "llm_bench"
version = "0.0.1"
authors = [
  { name="Michael Wyatt", email="michaelwyatt@microsoft.com" },
]
description = "LLM benchmarking tool"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/Microsoft/DeepSpeedExamples/tree/master/benchmarks/inference/llm-bench"
Issues = "https://github.com/Microsoft/DeepSpeedExamples/issues"
